--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,9 +1,9 @@
 
-<div class="d-flex flex-column" style="min-height: 100vh">
+<div class="container">
   <app-nav/>
-  <main class="flex-fill">
-    <router-outlet />
-  </main>
-  <Footer></Footer>
+<!--  <main class="flex-fill">-->
+<!--    <router-outlet />-->
+<!--  </main>-->
+<!--  <Footer></Footer>-->
 </div>
 
