Moved categories out from nav bar. Added icons

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,6 +1,10 @@
 
 <div class="container">
-  <app-nav/>
+    <app-nav/>
+  <div class="d-flex justify-content-center">
+    <app-navmenu></app-navmenu>
+  </div>
+
 <!--  <main class="flex-fill">-->
 <!--    <router-outlet />-->
 <!--  </main>-->
