--- a/src/app/nav/nav.html
+++ b/src/app/nav/nav.html
@@ -6,9 +6,8 @@
   <div>
     <input class="search-bar p-2" type="search" placeholder="Szukaj...">
   </div>
-  <app-navmenu></app-navmenu>
   <div class="d-flex  nav-logo p-2 nav-element justify-content-between">
-    <i class="fas fa-user category"></i>
-    <i class="fas fa-shopping-cart category"></i>
+    <i class="fas fa-user category-nav"></i>
+    <i class="fas fa-shopping-cart category-nav"></i>
   </div>
 </nav>
