--- a/src/app/navmenu/navmenu.html
+++ b/src/app/navmenu/navmenu.html
@@ -1,15 +1,38 @@
-<div class="d-flex">
-  <div class="d-flex p-2 nav-element nav-element-cat">
-    <div class="category ">CPU</div>
-    <div class="category ">GPU</div>
-    <div class="category ">RAM</div>
-    <div class="category ">MOBO</div>
-    <div class="category ">PSU</div>
-    <div class="category ">SSD</div>
-    <div class="category ">CASE</div>
-    <div class="category ">COOLER</div>
+<div style="margin-top: 10rem">
+  <div class="d-flex nav-element-cat">
+    <div class="category d-grid justify-content-center align-items-center ">
+      <img class="category-svg" src="cpu.svg">
+      <span class="d-block text-center">CPU</span>
+    </div>
+    <div class="category d-grid justify-content-center align-items-center ">
+      <img class="category-svg" src="gpu.svg">
+      <span class="d-block text-center">GPU</span>
+    </div>
+    <div class="category d-grid justify-content-center align-items-center ">
+      <img class="category-svg" src="ram.svg">
+      <span class="d-block text-center">RAM</span>
+    </div>
+    <div class="category d-grid justify-content-center align-items-center ">
+      <img class="category-svg" src="mobo.svg">
+      <span class="d-block text-center">MOBO</span>
+    </div>
+    <div class="category d-grid justify-content-center align-items-center ">
+      <img class="category-svg" src="psu.svg">
+      <span class="d-block text-center">PSU</span>
+    </div>
+    <div class="category d-grid justify-content-center align-items-center ">
+      <img class="category-svg" src="ssd.svg">
+      <span class="d-block text-center">SSD</span>
+    </div>
+    <div class="category d-grid justify-content-center align-items-center ">
+      <img class="category-svg" src="case.svg">
+      <span class="d-block text-center">CASE</span>
+    </div>
+    <div class="category d-grid justify-content-center align-items-center ">
+      <img class="category-svg" src="cooler.svg">
+      <span class="d-block text-center">COOLER</span>
+    </div>
   </div>
-
 </div>
 
 <!--<div class="justify-content-center bg-light ">-->
