--- a/src/styles.css
+++ b/src/styles.css
@@ -39,19 +39,37 @@ body {
   box-shadow: var(--shadow-s);
   font: var(--nav-cat-font);
 }
+.nav-element-cat {
+  font: var(--nav-cat-font);
+}
+.category:hover{
+  box-shadow: var(--shadow-l);
+  cursor: pointer;
+}
 nav{
   background: var(--bg);
   border-radius: 0.5rem;
 }
-.category{
+.category-nav{
   border-radius: 0.5rem;
   margin: 0 0.5rem;
   padding: 0.7rem 0.7rem;
 }
-
-.category:hover{
+.category{
+  background: var(--bg-light);
   box-shadow: var(--shadow-s);
-  cursor: pointer;
+  border-radius: 0.5rem;
+  margin: 0 0.5rem;
+  padding: 0.7rem 0.7rem;
+  --category-size: 15rem;
+  width: var(--category-size);
+  height: var(--category-size);
+  font: var(--nav-logo-font);
+}
+.category-svg{
+  --cat-svg-size: 6rem;
+  width: var(--cat-svg-size);
+  height: var(--cat-svg-size);
 }
 
 .search-bar {
@@ -59,6 +77,7 @@ nav{
   box-shadow: var(--shadow-s);
   border-radius: 0.5rem;
   border: none;
+  width: 30rem
 }
 
 
