--- a/src/app/categories/category-card/category-card.html
+++ b/src/app/categories/category-card/category-card.html
@@ -1,4 +1,4 @@
-<div class="category d-grid justify-content-center align-items-center ">
+<div class="category-card d-grid justify-content-center align-items-center ">
   <img width="96" height="96" ngSrc="{{categoryImgPath()}}" alt="categoryIcon">
   <span class="d-block text-center">{{category()}}</span>
 </div>
