--- a/src/app/home/home.html
+++ b/src/app/home/home.html
@@ -1,4 +1,4 @@
-<div class="d-flex nav-element-cat">
+<div class="d-flex mt-5 flex-wrap justify-content-center home-element-cat">
   @for (cat of categories; track categories) {
     <app-category-card [category]="cat"/>
   }
