--- a/src/app/categories/category/category.html
+++ b/src/app/categories/category/category.html
@@ -1,3 +1,6 @@
-<div class="d-flex mt-5">
-    <div class="product-test"></div>
+<div class="d-flex product-test p-5 mt-5 ">
+  <div class="product-card-test">
+    <img ngSrc>
+  </div>
+
 </div>
