--- a/src/app/home/home.html
+++ b/src/app/home/home.html
@@ -1,5 +1,7 @@
-<div class="d-flex mt-5 flex-wrap justify-content-center home-element-cat">
-  @for (cat of categories; track categories) {
-    <app-category-card [category]="cat"/>
-  }
-</div>
+<!--<div class="d-flex mt-5 flex-wrap justify-content-center home-element-cat">-->
+<!--  @for (cat of categories; track categories) {-->
+<!--    <app-category-card [category]="cat"/>-->
+<!--  }-->
+<!--</div>-->
+
+<app-category/>
