Small design improvements

--- a/src/app/categories/category/category.html
+++ b/src/app/categories/category/category.html
@@ -1,6 +1,8 @@
-<div class="d-flex flex-wrap product-test p-3 mt-5 ">
+<div class="d-flex flex-wrap product-test p-3 mt-5">
   <div class="p-3 flex-column product-card-test">
-    <img width="240" height="200" ngSrc="https://cdn.x-kom.pl/i/setup/images/prod/big/1200x1000,,2025/3/pr_2025_3_24_11_13_15_22_00.jpg" alt="img">
+    <img width="240" height="200"
+         ngSrc="https://cdn.x-kom.pl/i/setup/images/prod/big/1200x1000,,2025/3/pr_2025_3_24_11_13_15_22_00.jpg"
+         alt="img">
     <div class="d-flex flex-column">
       <span class="product-card-text-main">MSI GeForce RTX 5080 Gaming Trio OC</span>
       <span class="product-card-text-secondary">Recommended PSU: 850W</span>
@@ -10,7 +12,9 @@
     </div>
   </div>
   <div class="p-3 flex-column product-card-test">
-    <img width="240" height="200" ngSrc="https://cdn.x-kom.pl/i/setup/images/prod/big/1200x1000,,2025/3/pr_2025_3_24_11_13_15_22_00.jpg" alt="img">
+    <img width="240" height="200"
+         ngSrc="https://cdn.x-kom.pl/i/setup/images/prod/big/1200x1000,,2025/3/pr_2025_3_24_11_13_15_22_00.jpg"
+         alt="img">
     <div class="d-flex flex-column">
       <span class="product-card-text-main">MSI GeForce RTX 5080 Gaming Trio OC</span>
       <span class="product-card-text-secondary">Recommended PSU: 850W</span>
@@ -18,90 +22,113 @@
       <span class="product-card-text-secondary">Core Ratio: 2532Mhz</span>
       <span class="product-card-text-main">6800 zł</span>
     </div>
-  </div><div class="p-3 flex-column product-card-test">
-  <img width="240" height="200" ngSrc="https://cdn.x-kom.pl/i/setup/images/prod/big/1200x1000,,2025/3/pr_2025_3_24_11_13_15_22_00.jpg" alt="img">
-  <div class="d-flex flex-column">
-    <span class="product-card-text-main">MSI GeForce RTX 5080 Gaming Trio OC</span>
-    <span class="product-card-text-secondary">Recommended PSU: 850W</span>
-    <span class="product-card-text-secondary">Memory Bus: 356-bit</span>
-    <span class="product-card-text-secondary">Core Ratio: 2532Mhz</span>
-    <span class="product-card-text-main">6800 zł</span>
   </div>
-</div><div class="p-3 flex-column product-card-test">
-  <img width="240" height="200" ngSrc="https://cdn.x-kom.pl/i/setup/images/prod/big/1200x1000,,2025/3/pr_2025_3_24_11_13_15_22_00.jpg" alt="img">
-  <div class="d-flex flex-column">
-    <span class="product-card-text-main">MSI GeForce RTX 5080 Gaming Trio OC</span>
-    <span class="product-card-text-secondary">Recommended PSU: 850W</span>
-    <span class="product-card-text-secondary">Memory Bus: 356-bit</span>
-    <span class="product-card-text-secondary">Core Ratio: 2532Mhz</span>
-    <span class="product-card-text-main">6800 zł</span>
+  <div class="p-3 flex-column product-card-test">
+    <img width="240" height="200"
+         ngSrc="https://cdn.x-kom.pl/i/setup/images/prod/big/1200x1000,,2025/3/pr_2025_3_24_11_13_15_22_00.jpg"
+         alt="img">
+    <div class="d-flex flex-column">
+      <span class="product-card-text-main">MSI GeForce RTX 5080 Gaming Trio OC</span>
+      <span class="product-card-text-secondary">Recommended PSU: 850W</span>
+      <span class="product-card-text-secondary">Memory Bus: 356-bit</span>
+      <span class="product-card-text-secondary">Core Ratio: 2532Mhz</span>
+      <span class="product-card-text-main">6800 zł</span>
+    </div>
   </div>
-</div><div class="p-3 flex-column product-card-test">
-  <img width="240" height="200" ngSrc="https://cdn.x-kom.pl/i/setup/images/prod/big/1200x1000,,2025/3/pr_2025_3_24_11_13_15_22_00.jpg" alt="img">
-  <div class="d-flex flex-column">
-    <span class="product-card-text-main">MSI GeForce RTX 5080 Gaming Trio OC</span>
-    <span class="product-card-text-secondary">Recommended PSU: 850W</span>
-    <span class="product-card-text-secondary">Memory Bus: 356-bit</span>
-    <span class="product-card-text-secondary">Core Ratio: 2532Mhz</span>
-    <span class="product-card-text-main">6800 zł</span>
+  <div class="p-3 flex-column product-card-test">
+    <img width="240" height="200"
+         ngSrc="https://cdn.x-kom.pl/i/setup/images/prod/big/1200x1000,,2025/3/pr_2025_3_24_11_13_15_22_00.jpg"
+         alt="img">
+    <div class="d-flex flex-column">
+      <span class="product-card-text-main">MSI GeForce RTX 5080 Gaming Trio OC</span>
+      <span class="product-card-text-secondary">Recommended PSU: 850W</span>
+      <span class="product-card-text-secondary">Memory Bus: 356-bit</span>
+      <span class="product-card-text-secondary">Core Ratio: 2532Mhz</span>
+      <span class="product-card-text-main">6800 zł</span>
+    </div>
   </div>
-</div><div class="p-3 flex-column product-card-test">
-  <img width="240" height="200" ngSrc="https://cdn.x-kom.pl/i/setup/images/prod/big/1200x1000,,2025/3/pr_2025_3_24_11_13_15_22_00.jpg" alt="img">
-  <div class="d-flex flex-column">
-    <span class="product-card-text-main">MSI GeForce RTX 5080 Gaming Trio OC</span>
-    <span class="product-card-text-secondary">Recommended PSU: 850W</span>
-    <span class="product-card-text-secondary">Memory Bus: 356-bit</span>
-    <span class="product-card-text-secondary">Core Ratio: 2532Mhz</span>
-    <span class="product-card-text-main">6800 zł</span>
+  <div class="p-3 flex-column product-card-test">
+    <img width="240" height="200"
+         ngSrc="https://cdn.x-kom.pl/i/setup/images/prod/big/1200x1000,,2025/3/pr_2025_3_24_11_13_15_22_00.jpg"
+         alt="img">
+    <div class="d-flex flex-column">
+      <span class="product-card-text-main">MSI GeForce RTX 5080 Gaming Trio OC</span>
+      <span class="product-card-text-secondary">Recommended PSU: 850W</span>
+      <span class="product-card-text-secondary">Memory Bus: 356-bit</span>
+      <span class="product-card-text-secondary">Core Ratio: 2532Mhz</span>
+      <span class="product-card-text-main">6800 zł</span>
+    </div>
   </div>
-</div><div class="p-3 flex-column product-card-test">
-  <img width="240" height="200" ngSrc="https://cdn.x-kom.pl/i/setup/images/prod/big/1200x1000,,2025/3/pr_2025_3_24_11_13_15_22_00.jpg" alt="img">
-  <div class="d-flex flex-column">
-    <span class="product-card-text-main">MSI GeForce RTX 5080 Gaming Trio OC</span>
-    <span class="product-card-text-secondary">Recommended PSU: 850W</span>
-    <span class="product-card-text-secondary">Memory Bus: 356-bit</span>
-    <span class="product-card-text-secondary">Core Ratio: 2532Mhz</span>
-    <span class="product-card-text-main">6800 zł</span>
+  <div class="p-3 flex-column product-card-test">
+    <img width="240" height="200"
+         ngSrc="https://cdn.x-kom.pl/i/setup/images/prod/big/1200x1000,,2025/3/pr_2025_3_24_11_13_15_22_00.jpg"
+         alt="img">
+    <div class="d-flex flex-column">
+      <span class="product-card-text-main">MSI GeForce RTX 5080 Gaming Trio OC</span>
+      <span class="product-card-text-secondary">Recommended PSU: 850W</span>
+      <span class="product-card-text-secondary">Memory Bus: 356-bit</span>
+      <span class="product-card-text-secondary">Core Ratio: 2532Mhz</span>
+      <span class="product-card-text-main">6800 zł</span>
+    </div>
   </div>
-</div><div class="p-3 flex-column product-card-test">
-  <img width="240" height="200" ngSrc="https://cdn.x-kom.pl/i/setup/images/prod/big/1200x1000,,2025/3/pr_2025_3_24_11_13_15_22_00.jpg" alt="img">
-  <div class="d-flex flex-column">
-    <span class="product-card-text-main">MSI GeForce RTX 5080 Gaming Trio OC</span>
-    <span class="product-card-text-secondary">Recommended PSU: 850W</span>
-    <span class="product-card-text-secondary">Memory Bus: 356-bit</span>
-    <span class="product-card-text-secondary">Core Ratio: 2532Mhz</span>
-    <span class="product-card-text-main">6800 zł</span>
+  <div class="p-3 flex-column product-card-test">
+    <img width="240" height="200"
+         ngSrc="https://cdn.x-kom.pl/i/setup/images/prod/big/1200x1000,,2025/3/pr_2025_3_24_11_13_15_22_00.jpg"
+         alt="img">
+    <div class="d-flex flex-column">
+      <span class="product-card-text-main">MSI GeForce RTX 5080 Gaming Trio OC</span>
+      <span class="product-card-text-secondary">Recommended PSU: 850W</span>
+      <span class="product-card-text-secondary">Memory Bus: 356-bit</span>
+      <span class="product-card-text-secondary">Core Ratio: 2532Mhz</span>
+      <span class="product-card-text-main">6800 zł</span>
+    </div>
   </div>
-</div><div class="p-3 flex-column product-card-test">
-  <img width="240" height="200" ngSrc="https://cdn.x-kom.pl/i/setup/images/prod/big/1200x1000,,2025/3/pr_2025_3_24_11_13_15_22_00.jpg" alt="img">
-  <div class="d-flex flex-column">
-    <span class="product-card-text-main">MSI GeForce RTX 5080 Gaming Trio OC</span>
-    <span class="product-card-text-secondary">Recommended PSU: 850W</span>
-    <span class="product-card-text-secondary">Memory Bus: 356-bit</span>
-    <span class="product-card-text-secondary">Core Ratio: 2532Mhz</span>
-    <span class="product-card-text-main">6800 zł</span>
+  <div class="p-3 flex-column product-card-test">
+    <img width="240" height="200"
+         ngSrc="https://cdn.x-kom.pl/i/setup/images/prod/big/1200x1000,,2025/3/pr_2025_3_24_11_13_15_22_00.jpg"
+         alt="img">
+    <div class="d-flex flex-column">
+      <span class="product-card-text-main">MSI GeForce RTX 5080 Gaming Trio OC</span>
+      <span class="product-card-text-secondary">Recommended PSU: 850W</span>
+      <span class="product-card-text-secondary">Memory Bus: 356-bit</span>
+      <span class="product-card-text-secondary">Core Ratio: 2532Mhz</span>
+      <span class="product-card-text-main">6800 zł</span>
+    </div>
   </div>
-</div><div class="p-3 flex-column product-card-test">
-  <img width="240" height="200" ngSrc="https://cdn.x-kom.pl/i/setup/images/prod/big/1200x1000,,2025/3/pr_2025_3_24_11_13_15_22_00.jpg" alt="img">
-  <div class="d-flex flex-column">
-    <span class="product-card-text-main">MSI GeForce RTX 5080 Gaming Trio OC</span>
-    <span class="product-card-text-secondary">Recommended PSU: 850W</span>
-    <span class="product-card-text-secondary">Memory Bus: 356-bit</span>
-    <span class="product-card-text-secondary">Core Ratio: 2532Mhz</span>
-    <span class="product-card-text-main">6800 zł</span>
+  <div class="p-3 flex-column product-card-test">
+    <img width="240" height="200"
+         ngSrc="https://cdn.x-kom.pl/i/setup/images/prod/big/1200x1000,,2025/3/pr_2025_3_24_11_13_15_22_00.jpg"
+         alt="img">
+    <div class="d-flex flex-column">
+      <span class="product-card-text-main">MSI GeForce RTX 5080 Gaming Trio OC</span>
+      <span class="product-card-text-secondary">Recommended PSU: 850W</span>
+      <span class="product-card-text-secondary">Memory Bus: 356-bit</span>
+      <span class="product-card-text-secondary">Core Ratio: 2532Mhz</span>
+      <span class="product-card-text-main">6800 zł</span>
+    </div>
   </div>
-</div><div class="p-3 flex-column product-card-test">
-  <img width="240" height="200" ngSrc="https://cdn.x-kom.pl/i/setup/images/prod/big/1200x1000,,2025/3/pr_2025_3_24_11_13_15_22_00.jpg" alt="img">
-  <div class="d-flex flex-column">
-    <span class="product-card-text-main">MSI GeForce RTX 5080 Gaming Trio OC</span>
-    <span class="product-card-text-secondary">Recommended PSU: 850W</span>
-    <span class="product-card-text-secondary">Memory Bus: 356-bit</span>
-    <span class="product-card-text-secondary">Core Ratio: 2532Mhz</span>
-    <span class="product-card-text-main">6800 zł</span>
+  <div class="p-3 flex-column product-card-test">
+    <img width="240" height="200"
+         ngSrc="https://cdn.x-kom.pl/i/setup/images/prod/big/1200x1000,,2025/3/pr_2025_3_24_11_13_15_22_00.jpg"
+         alt="img">
+    <div class="d-flex flex-column">
+      <span class="product-card-text-main">MSI GeForce RTX 5080 Gaming Trio OC</span>
+      <span class="product-card-text-secondary">Recommended PSU: 850W</span>
+      <span class="product-card-text-secondary">Memory Bus: 356-bit</span>
+      <span class="product-card-text-secondary">Core Ratio: 2532Mhz</span>
+      <span class="product-card-text-main">6800 zł</span>
+    </div>
   </div>
-</div>
-
-
-
-
+  <div class="p-3 flex-column product-card-test">
+    <img width="240" height="200"
+         ngSrc="https://cdn.x-kom.pl/i/setup/images/prod/big/1200x1000,,2025/3/pr_2025_3_24_11_13_15_22_00.jpg"
+         alt="img">
+    <div class="d-flex flex-column">
+      <span class="product-card-text-main">MSI GeForce RTX 5080 Gaming Trio OC</span>
+      <span class="product-card-text-secondary">Recommended PSU: 850W</span>
+      <span class="product-card-text-secondary">Memory Bus: 356-bit</span>
+      <span class="product-card-text-secondary">Core Ratio: 2532Mhz</span>
+      <span class="product-card-text-main">6800 zł</span>
+    </div>
+  </div>
 </div>
