--- a/src/app/home/home.html
+++ b/src/app/home/home.html
@@ -3,5 +3,7 @@
 <!--    <app-category-card [category]="cat"/>-->
 <!--  }-->
 <!--</div>-->
+<div class="d-flex justify-content-center">
+  <app-category/>
 
-<app-category/>
+</div>
