Can get cpus from db by calling azure func and then product api

--- a/src/app/categories/category/category.html
+++ b/src/app/categories/category/category.html
@@ -1,134 +1,21 @@
-<div class="d-flex flex-wrap product-test p-3 mt-5">
-  <div class="p-3 flex-column product-card-test">
-    <img width="240" height="200"
-         ngSrc="https://cdn.x-kom.pl/i/setup/images/prod/big/1200x1000,,2025/3/pr_2025_3_24_11_13_15_22_00.jpg"
-         alt="img">
-    <div class="d-flex flex-column">
-      <span class="product-card-text-main">MSI GeForce RTX 5080 Gaming Trio OC</span>
-      <span class="product-card-text-secondary">Recommended PSU: 850W</span>
-      <span class="product-card-text-secondary">Memory Bus: 356-bit</span>
-      <span class="product-card-text-secondary">Core Ratio: 2532Mhz</span>
-      <span class="product-card-text-main">6800 zł</span>
+<div class="d-flex flex-wrap product-test justify-content-center p-3 mt-5">
+  @for (cpu of cpus(); track cpu.id)
+  {
+    <div class="p-3 flex-column product-card-test">
+      <img
+        [ngSrc]="cpu.productImg"
+        width="240"
+        height="200"
+        alt="{{ cpu.name }}"
+      />
+      <div class="d-flex flex-column">
+        <span class="product-card-text-main">{{ cpu.name }}</span>
+        <span class="product-card-text-secondary">Architecture: {{ cpu.architecture }}</span>
+        <span class="product-card-text-secondary">Cores: {{ cpu.cores }}</span>
+        <span class="product-card-text-secondary">Threads: {{ cpu.threads }}</span>
+        <span class="product-card-text-secondary">Socket: {{ cpu.socket }}</span>
+        <span class="product-card-text-main">{{ cpu.price }} zł</span>
+      </div>
     </div>
-  </div>
-  <div class="p-3 flex-column product-card-test">
-    <img width="240" height="200"
-         ngSrc="https://cdn.x-kom.pl/i/setup/images/prod/big/1200x1000,,2025/3/pr_2025_3_24_11_13_15_22_00.jpg"
-         alt="img">
-    <div class="d-flex flex-column">
-      <span class="product-card-text-main">MSI GeForce RTX 5080 Gaming Trio OC</span>
-      <span class="product-card-text-secondary">Recommended PSU: 850W</span>
-      <span class="product-card-text-secondary">Memory Bus: 356-bit</span>
-      <span class="product-card-text-secondary">Core Ratio: 2532Mhz</span>
-      <span class="product-card-text-main">6800 zł</span>
-    </div>
-  </div>
-  <div class="p-3 flex-column product-card-test">
-    <img width="240" height="200"
-         ngSrc="https://cdn.x-kom.pl/i/setup/images/prod/big/1200x1000,,2025/3/pr_2025_3_24_11_13_15_22_00.jpg"
-         alt="img">
-    <div class="d-flex flex-column">
-      <span class="product-card-text-main">MSI GeForce RTX 5080 Gaming Trio OC</span>
-      <span class="product-card-text-secondary">Recommended PSU: 850W</span>
-      <span class="product-card-text-secondary">Memory Bus: 356-bit</span>
-      <span class="product-card-text-secondary">Core Ratio: 2532Mhz</span>
-      <span class="product-card-text-main">6800 zł</span>
-    </div>
-  </div>
-  <div class="p-3 flex-column product-card-test">
-    <img width="240" height="200"
-         ngSrc="https://cdn.x-kom.pl/i/setup/images/prod/big/1200x1000,,2025/3/pr_2025_3_24_11_13_15_22_00.jpg"
-         alt="img">
-    <div class="d-flex flex-column">
-      <span class="product-card-text-main">MSI GeForce RTX 5080 Gaming Trio OC</span>
-      <span class="product-card-text-secondary">Recommended PSU: 850W</span>
-      <span class="product-card-text-secondary">Memory Bus: 356-bit</span>
-      <span class="product-card-text-secondary">Core Ratio: 2532Mhz</span>
-      <span class="product-card-text-main">6800 zł</span>
-    </div>
-  </div>
-  <div class="p-3 flex-column product-card-test">
-    <img width="240" height="200"
-         ngSrc="https://cdn.x-kom.pl/i/setup/images/prod/big/1200x1000,,2025/3/pr_2025_3_24_11_13_15_22_00.jpg"
-         alt="img">
-    <div class="d-flex flex-column">
-      <span class="product-card-text-main">MSI GeForce RTX 5080 Gaming Trio OC</span>
-      <span class="product-card-text-secondary">Recommended PSU: 850W</span>
-      <span class="product-card-text-secondary">Memory Bus: 356-bit</span>
-      <span class="product-card-text-secondary">Core Ratio: 2532Mhz</span>
-      <span class="product-card-text-main">6800 zł</span>
-    </div>
-  </div>
-  <div class="p-3 flex-column product-card-test">
-    <img width="240" height="200"
-         ngSrc="https://cdn.x-kom.pl/i/setup/images/prod/big/1200x1000,,2025/3/pr_2025_3_24_11_13_15_22_00.jpg"
-         alt="img">
-    <div class="d-flex flex-column">
-      <span class="product-card-text-main">MSI GeForce RTX 5080 Gaming Trio OC</span>
-      <span class="product-card-text-secondary">Recommended PSU: 850W</span>
-      <span class="product-card-text-secondary">Memory Bus: 356-bit</span>
-      <span class="product-card-text-secondary">Core Ratio: 2532Mhz</span>
-      <span class="product-card-text-main">6800 zł</span>
-    </div>
-  </div>
-  <div class="p-3 flex-column product-card-test">
-    <img width="240" height="200"
-         ngSrc="https://cdn.x-kom.pl/i/setup/images/prod/big/1200x1000,,2025/3/pr_2025_3_24_11_13_15_22_00.jpg"
-         alt="img">
-    <div class="d-flex flex-column">
-      <span class="product-card-text-main">MSI GeForce RTX 5080 Gaming Trio OC</span>
-      <span class="product-card-text-secondary">Recommended PSU: 850W</span>
-      <span class="product-card-text-secondary">Memory Bus: 356-bit</span>
-      <span class="product-card-text-secondary">Core Ratio: 2532Mhz</span>
-      <span class="product-card-text-main">6800 zł</span>
-    </div>
-  </div>
-  <div class="p-3 flex-column product-card-test">
-    <img width="240" height="200"
-         ngSrc="https://cdn.x-kom.pl/i/setup/images/prod/big/1200x1000,,2025/3/pr_2025_3_24_11_13_15_22_00.jpg"
-         alt="img">
-    <div class="d-flex flex-column">
-      <span class="product-card-text-main">MSI GeForce RTX 5080 Gaming Trio OC</span>
-      <span class="product-card-text-secondary">Recommended PSU: 850W</span>
-      <span class="product-card-text-secondary">Memory Bus: 356-bit</span>
-      <span class="product-card-text-secondary">Core Ratio: 2532Mhz</span>
-      <span class="product-card-text-main">6800 zł</span>
-    </div>
-  </div>
-  <div class="p-3 flex-column product-card-test">
-    <img width="240" height="200"
-         ngSrc="https://cdn.x-kom.pl/i/setup/images/prod/big/1200x1000,,2025/3/pr_2025_3_24_11_13_15_22_00.jpg"
-         alt="img">
-    <div class="d-flex flex-column">
-      <span class="product-card-text-main">MSI GeForce RTX 5080 Gaming Trio OC</span>
-      <span class="product-card-text-secondary">Recommended PSU: 850W</span>
-      <span class="product-card-text-secondary">Memory Bus: 356-bit</span>
-      <span class="product-card-text-secondary">Core Ratio: 2532Mhz</span>
-      <span class="product-card-text-main">6800 zł</span>
-    </div>
-  </div>
-  <div class="p-3 flex-column product-card-test">
-    <img width="240" height="200"
-         ngSrc="https://cdn.x-kom.pl/i/setup/images/prod/big/1200x1000,,2025/3/pr_2025_3_24_11_13_15_22_00.jpg"
-         alt="img">
-    <div class="d-flex flex-column">
-      <span class="product-card-text-main">MSI GeForce RTX 5080 Gaming Trio OC</span>
-      <span class="product-card-text-secondary">Recommended PSU: 850W</span>
-      <span class="product-card-text-secondary">Memory Bus: 356-bit</span>
-      <span class="product-card-text-secondary">Core Ratio: 2532Mhz</span>
-      <span class="product-card-text-main">6800 zł</span>
-    </div>
-  </div>
-  <div class="p-3 flex-column product-card-test">
-    <img width="240" height="200"
-         ngSrc="https://cdn.x-kom.pl/i/setup/images/prod/big/1200x1000,,2025/3/pr_2025_3_24_11_13_15_22_00.jpg"
-         alt="img">
-    <div class="d-flex flex-column">
-      <span class="product-card-text-main">MSI GeForce RTX 5080 Gaming Trio OC</span>
-      <span class="product-card-text-secondary">Recommended PSU: 850W</span>
-      <span class="product-card-text-secondary">Memory Bus: 356-bit</span>
-      <span class="product-card-text-secondary">Core Ratio: 2532Mhz</span>
-      <span class="product-card-text-main">6800 zł</span>
-    </div>
-  </div>
+  }
 </div>
