--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,7 +1,6 @@
 <div class="container">
-    <app-nav/>
-  <div class="d-flex justify-content-center">
-   <app-home />
-  </div>
+  <app-nav/>
+
+    <router-outlet/>
 </div>
 
