--- a/src/app/home/home.html
+++ b/src/app/home/home.html
@@ -1,9 +1,8 @@
-<!--<div class="d-flex mt-5 flex-wrap justify-content-center home-element-cat">-->
-<!--  @for (cat of categories; track categories) {-->
-<!--    <app-category-card [category]="cat"/>-->
-<!--  }-->
-<!--</div>-->
 <div class="d-flex justify-content-center">
-  <app-category/>
-
+  <div class="d-flex mt-5 flex-wrap justify-content-center home-element-cat">
+    @for (cat of categories; track categories) {
+      <app-category-card [category]="cat"/>
+    }
+  </div>
 </div>
+
