--- a/src/app/nav/nav.html
+++ b/src/app/nav/nav.html
@@ -1,8 +1,10 @@
 <nav class="d-flex m-2 p-2 align-items-center justify-content-between">
-  <div class="d-flex p-2 nav-element align-items-center">
-    <img class="rounded" width="40" height="40" ngSrc="favicon.ico" alt="icon">
-    <span class="m-1" style="font-size: 1.2rem">GoodStuff</span>
-  </div>
+  <a [routerLink]="['']">
+    <div class="d-flex p-2 nav-element align-items-center">
+      <img class="rounded" width="40" height="40" ngSrc="favicon.ico" alt="icon">
+      <span class="m-1" style="font-size: 1.2rem">GoodStuff</span>
+    </div>
+  </a>
   <div>
     <input class="search-bar p-2" type="search" placeholder="Szukaj...">
   </div>
