Added sign up page and logic

--- a/src/app/user/sign-in/sign-in.html
+++ b/src/app/user/sign-in/sign-in.html
@@ -31,7 +31,7 @@
         <h5>It's good time to Sign Up!</h5>
         You don't have choice anyway, without it you can't buy anything.
         <i class="fa-regular fa-face-smile-wink"></i>
-        <a href="" class="btn btn-primary mt-2 font-weight-bold d-block">Sign Up</a>
+        <a [routerLink]="['/user/sign-up']" class="btn btn-primary mt-2 font-weight-bold d-block">Sign Up</a>
       </div>
     </div>
   </div>
