Added activation email account info alert

--- a/src/app/user/sign-up/sign-up.html
+++ b/src/app/user/sign-up/sign-up.html
@@ -48,7 +48,7 @@
       <div class="col-6 float-left">
         <h4>Already have an account?</h4>
         <h5>Sign In instead!</h5>
-        <a [routerLink]=['user/sign-in'] class="btn btn-primary mt-2 font-weight-bold d-block">Sign In</a>
+        <a [routerLink]="['user/sign-in']" class="btn btn-primary mt-2 font-weight-bold d-block">Sign In</a>
       </div>
     </div>
   </div>
