--- a/src/app/nav/nav.html
+++ b/src/app/nav/nav.html
@@ -9,7 +9,7 @@
     <input class="search-bar p-2" type="search" placeholder="Szukaj...">
   </div>
   <div class="d-flex  nav-logo p-2 nav-element justify-content-between">
-    <a [routerLink]="['user/sign-in']">
+    <a [routerLink]="isSignedIn() ? ['user/dashboard'] : ['user/sign-in']">
       <i class="fas fa-user category-nav"></i>
     </a>
     <i class="fas fa-shopping-cart category-nav"></i>
